test/conformance/chainsaw/generating-policies/clone/sync/sync-delete-one-trigger/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: clone-sync-delete-one-trigger-1
---
apiVersion: v1
kind: Namespace
metadata:
  name: clone-sync-delete-one-trigger-2
