test/conformance/chainsaw/generating-policies/clone/sync/sync-delete-one-trigger/policy.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: GeneratingPolicy
metadata:
  name: clone-sync-delete-one-trigger
spec:
  evaluation:
    synchronize:
      enabled: true
  matchConstraints:
    resourceRules:
    - apiGroups:   ["networking.k8s.io"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["networkpolicies"]
  variables:
    - name: nsName
      expression: "object.metadata.namespace"
    - name: source
      expression: resource.get("v1", "secrets", "default", "clone-sync-delete-one-trigger")
  generate:
    - expression: generator.apply(variables.nsName, [variables.source])
