test/conformance/chainsaw/generating-policies/clone/sync/sync-delete-one-trigger/source.yaml
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  name: clone-sync-delete-one-trigger
  namespace: default
type: Opaque
