test/conformance/chainsaw/generating-policies/clone/sync/sync-delete-one-trigger/second-downstream-assert.yaml
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  name: clone-sync-delete-one-trigger
  namespace: clone-sync-delete-one-trigger-2
type: Opaque
